--- a/style.css
+++ b/style.css
@@ -2,3 +2,20 @@ html, body {
   height: 100%;
   width: 100%;
 }
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+
+body {
+  width: 100%;
+  height: 100vh;
+}
+
+.canvas {
+  border: 1px solid black;
+  margin: 2px;
+  width: calc(100% - 6px);
+  height: calc(100% - 6px);
+}
